sanders: wifi: Limit hotspot to 10 devices
Signed-off-by: Melvin <kartik3163@gmail.com>
Signed-off-by: Mayur <ultramayur123@gmail.com>

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -447,6 +447,9 @@ gEnablePowerSaveOffload=4
 gRoamPrefer5GHz=1
 gSelect5GHzMargin=3
 
+# TheCrazyLex@PA limit max AP peers to 10 to prevent overloading
+gSoftApMaxPeers=10
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
