sanders: configs: wifi: Disable RX wakelock feature
Change-Id: I3e093c8fd16b231d531751056648bd6b745e5171
Signed-off-by: David Trpchevski <trpcevski.david@gmail.com>
Signed-off-by: Melvin <kartik3163@gmail.com>
Signed-off-by: ashwatthama <sai404142@gmail.com>
Signed-off-by: Mayur <ultramayur123@gmail.com>

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -453,6 +453,9 @@ gSoftApMaxPeers=10
 #Disable Fatal event
 gEnableFatalEvent=0
 
+# Disable rx wakelock
+rx_wakelock_timeout=0
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
