--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -48,13 +48,24 @@ on early-init
     write /sys/block/zram0/use_dedup 1
     write /proc/sys/vm/page-cluster 0
 
+on init
+    # Create cgroup mount point for memory
+    mkdir /sys/fs/cgroup/memory/bg 0750 root system
+    write /sys/fs/cgroup/memory/bg/memory.swappiness 140
+    write /sys/fs/cgroup/memory/bg/memory.move_charge_at_immigrate 1
+    chown root system /sys/fs/cgroup/memory/bg/tasks
+    chmod 0660 /sys/fs/cgroup/memory/bg/tasks
+
+    write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
+
 on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
+    mount_all /vendor/etc/fstab.qcom --early
+    write /proc/sys/vm/swappiness 100
 
     # Start HW service manager early
     start hwservicemanager
-    mount_all /vendor/etc/fstab.qcom --early
 
     chown root system /mnt/vendor/persist
     chmod 0771 /mnt/vendor/persist
@@ -64,22 +75,20 @@ on fs
 
 on late-fs
     # Start services for bootanim
-    start vendor.configstore-hal
     start servicemanager
     start surfaceflinger
     start bootanim
+    start vendor.configstore-hal
     start vendor.gralloc-2-0
 
-    # Wait for hwservicemanager ready since fsck might be triggered in mount_all --late
-    # In such case, init won't responce the property_set from hwservicemanager and then
-    # cause services for bootanim not running.
-    wait_for_prop hwservicemanager.ready true
-
-    # mount RW partitions which need run fsck
+    # Mount RW partitions which need run fsck
     mount_all /vendor/etc/fstab.qcom --late
 
-on init
-    write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
+    chown root system /mnt/vendor/persist
+    chmod 0771 /mnt/vendor/persist
+    mkdir /mnt/vendor/persist/data 0700 system system
+    mkdir /mnt/vendor/persist/bms 0700 root system
+    restorecon_recursive /mnt/vendor/persist
 
     # Set permissions for persist partition
     mkdir /persist 0771 root system
@@ -121,16 +130,8 @@ on early-boot
     chmod 0664 /mnt/vendor/persist/sensors/sensors_settings
 
 on boot
-    # access permission for secure touch
-    chmod 0660 /sys/devices/soc/78b7000.i2c/i2c-3/3-0020/input/input0/secure_touch_enable
-    chmod 0440 /sys/devices/soc/78b7000.i2c/i2c-3/3-0020/input/input0/secure_touch
-    chown system drmrpc /sys/devices/soc/78b7000.i2c/i2c-3/3-0020/input/input0/secure_touch_enable
-    chown system drmrpc /sys/devices/soc/78b7000.i2c/i2c-3/3-0020/input/input0/secure_touch
-
-    # fpc1020 proximity state support
     chmod 0660 /sys/devices/soc/7af8000.spi/spi_master/spi8/spi8.0/proximity_state
     chown system system /sys/devices/soc/7af8000.spi/spi_master/spi8/spi8.0/proximity_state
-
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/type
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/state
