--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -902,6 +902,7 @@ on property:ro.boot.ram=4GB
     write /sys/block/zram0/disksize 1073741824
     write /proc/sys/vm/swappiness 50
 
+on property:sys.boot_completed=1
     # scheduler settings
     write /proc/sys/kernel/sched_window_stats_policy 2
     write /proc/sys/kernel/sched_ravg_hist_size 3
@@ -962,19 +963,8 @@ on property:ro.boot.ram=4GB
     write /sys/devices/system/cpu/cpufreq/interactive/io_is_busy 0
     write /sys/devices/system/cpu/cpufreq/interactive/target_loads "80 652800:57 1036800:67 1401600:75 1689600:80 1843200:85 1958400:87"
     write /sys/devices/system/cpu/cpufreq/interactive/min_sample_time 39000
-    write /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay 0
-    write /sys/devices/system/cpu/cpufreq/interactive/min_sample_time 0
-    write /sys/devices/system/cpu/cpufreq/interactive/ignore_hispeed_on_notif 0
-    write /sys/devices/system/cpu/cpufreq/interactive/boost 0
-    write /sys/devices/system/cpu/cpufreq/interactive/fast_ramp_down 0
     write /sys/devices/system/cpu/cpufreq/interactive/align_windows 1
-    write /sys/devices/system/cpu/cpufreq/interactive/use_migration_notif 1
-    write /sys/devices/system/cpu/cpufreq/interactive/enable_prediction 0
-    write /sys/devices/system/cpu/cpufreq/interactive/use_sched_load 0
-    write /sys/devices/system/cpu/cpufreq/interactive/max_freq_hysteresis 0
-    write /sys/devices/system/cpu/cpufreq/interactive/boostpulse_duration 0
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 652800
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2016000
 
     # re-enable thermal & BCL core_control now
     write /sys/module/msm_thermal/core_control/enabled 1
