--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -130,6 +130,8 @@ on boot
     # fpc1020 proximity state support
     chmod 0660 /sys/devices/soc/7af8000.spi/spi_master/spi8/spi8.0/proximity_state
     chown system system /sys/devices/soc/7af8000.spi/spi_master/spi8/spi8.0/proximity_state
+    chmod 0660 /sys/devices/soc/7af8000.spi/spi_master/spi8/sp8.0/enable_wakeup
+    chown system system /sys/devices/soc/7af8000.spi/spi_master/spi8/spi8.0/enable_wakeup
 
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/type
