sanders: fix wifi random reboot issue
Signed-off-by: Mayur <ultramayur123@gmail.com>

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -450,6 +450,9 @@ gSelect5GHzMargin=3
 # TheCrazyLex@PA limit max AP peers to 10 to prevent overloading
 gSoftApMaxPeers=10
 
+#Disable Fatal event
+gEnableFatalEvent=0
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
