--- a/MotoActions/AndroidManifest.xml
+++ b/MotoActions/AndroidManifest.xml
@@ -138,6 +138,16 @@
                  <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".speaker.ClearSpeakerActivity"
+            android:exported="false"
+            android:label="@string/clear_speaker_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
