--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -533,7 +533,7 @@ on post-fs-data
 
     setprop vold.post_fs_data_done 1
 
-service charger /charger
+service charger /system/bin/charger
     class charger
     user system
     group system graphics input
